2024-10-31  Charlie Zender  <zender@uci.edu>

	* NCO 5.3.0-alpha03 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.3.0-alpha03: Slow Horses';git push
	git tag -a 5.3.0-alpha03 -m '';git push --tags

	* S1D compute mec_nbr_out as maximum MEC index utilized (fixes ne30 bug)

2024-10-30  Charlie Zender  <zender@uci.edu>

	* NCO 5.3.0-alpha02 release procedure:
	cd ~/nco;git commit -a -m "Version 5.3.0-alpha02: Widow's Peak";git push
	git tag -a 5.3.0-alpha02 -m 'ncks: S1D mec_idx fix, bare ground, rdr w/SNLSNO';git push --tags

	* Use SNLSNO to assign levsno, levsno1, and levtot snow layers to top-down (ocean-like) vertical grid

	* Restore PFT ityp = 0 = not vegetated to all output datasets

2024-10-24  Charlie Zender  <zender@uci.edu>

	* mec_idx now allows for < 10 MEC columns, possibly with gaps, in glacier/MEC landunits

2024-10-23  Charlie Zender  <zender@uci.edu>

	* ncclimo update examples

2024-10-22  Charlie Zender  <zender@uci.edu>

	* NCO 5.3.0-alpha01 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.3.0-alpha01: Sanitize';git push
	git tag -a 5.3.0-alpha01 -m 'Functionally identical to 5.2.9 except better S1D PFT/CFT labels';git push --tags

	* Replace auto-generated PFT/CFT labels with labels gleaned from global attributes

2024-10-21  Charlie Zender  <zender@uci.edu>

	* Infer/determine and use self-consistent pft_ntr_nbr_out, pft_crp_nbr_out, pft_nbr_out for both history/restart datasets

2024-10-18  Charlie Zender  <zender@uci.edu>

	* NCO 5.2.9 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.2.9: Empathy Card';git push
	git tag -a 5.2.9 -m 'all: NC_FillValue; ncclimo: fix bsh syn; ncks: S1D pft dsk rdr, topounits, workaround, pft crd, sanitize, fflush; ncremap: fix ECMWF IFS, eamxx pdq';git push --tags

	* Progress inferring pft_sng_out from global attributes, though remains off by default

	* Read pft_nbr_nbr_in from history files

2024-10-17  Charlie Zender  <zender@uci.edu>

	* NCO 5.2.9-alpha03 release procedure: